objects/FinServ__AssetsAndLiabilities__c.object
<CustomObject>
    <description>Assets or liabilities that are not represented in a client&apos;s financial accounts, such as real estate or collectibles.</description>
    <fields>
        <fullName>AW_AUMSourceExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Asset Under Management Source External ID</description>
        <externalId>true</externalId>
        <label>AUM Source External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AW_AccountNumber__c</fullName>
        <description>The account number of the bank in which the Asset or Liability is placed</description>
        <label>Account Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_AccountType__c</fullName>
        <description>A picklist to select the account type</description>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Address__c</fullName>
        <description>Address of the Asset/Liability</description>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AW_AssetName__c</fullName>
        <description>This field describes the asset name and is filled from FNA Sync</description>
        <label>Asset Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_AvailableBalance__c</fullName>
        <description>This field describes the available balance of stated bank account and is filled from FNA Sync</description>
        <label>Available Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_BankName__c</fullName>
        <description>This field describes the bank in which the account is hold and is filled from FNA Sync</description>
        <label>Bank Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Benefit__c</fullName>
        <description>This field describes the benefit types and is filled from FNA Sync</description>
        <label>Benefits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Life Cover</fullName>
                </value>
                <value>
                    <fullName>Critical Illness</fullName>
                </value>
                <value>
                    <fullName>Disability Monthly</fullName>
                </value>
                <value>
                    <fullName>Disability Lump</fullName>
                </value>
                <value>
                    <fullName>Current Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_BondRepaymentAmount__c</fullName>
        <description>The amount required for bond repayment</description>
        <label>Bond Repayment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_CompanyLiabilityType__c</fullName>
        <description>This field describes the type of liability and is filled from FNA Sync</description>
        <label>CompanyLiability Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Company__c</fullName>
        <description>This field describes the company with which the asset/liability is from  and is filled from FNA Sync</description>
        <label>Company</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ContractNumber__c</fullName>
        <description>Contract Number Related to the current record</description>
        <label>Contract Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Currency__c</fullName>
        <description>This field describes the describes the currency of the asset/liability and is filled from FNA Sync</description>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZAR - South African Rand</fullName>
                </value>
                <value>
                    <fullName>USD - United States Dollar</fullName>
                </value>
                <value>
                    <fullName>EUR - European Euro</fullName>
                </value>
                <value>
                    <fullName>GBP - British Pound</fullName>
                </value>
                <value>
                    <fullName>CAD - Canadian Dollar</fullName>
                </value>
                <value>
                    <fullName>CHF - Switzerland Franc</fullName>
                </value>
                <value>
                    <fullName>JPY - Japanese Yen</fullName>
                </value>
                <value>
                    <fullName>NZD - New Zealand Dollar</fullName>
                </value>
                <value>
                    <fullName>RON - Romanian Leu</fullName>
                </value>
                <value>
                    <fullName>BGN - Bulgarian Lev</fullName>
                </value>
                <value>
                    <fullName>TRY - Turkish Lira</fullName>
                </value>
                <value>
                    <fullName>AUD - Australian dollar</fullName>
                </value>
                <value>
                    <fullName>CZK - Czech Republic Koruna</fullName>
                </value>
                <value>
                    <fullName>DKK - Danish Krone</fullName>
                </value>
                <value>
                    <fullName>HKD - Hong Kong Dollar</fullName>
                </value>
                <value>
                    <fullName>HUF - Hungarian Forint</fullName>
                </value>
                <value>
                    <fullName>ILS - Israeli Shekel</fullName>
                </value>
                <value>
                    <fullName>MXN - Mexican Peso</fullName>
                </value>
                <value>
                    <fullName>NOK - Norwegian krone</fullName>
                </value>
                <value>
                    <fullName>PLN - Polish Zloty</fullName>
                </value>
                <value>
                    <fullName>RUB - Russian Ruble</fullName>
                </value>
                <value>
                    <fullName>SEK - Swedish krona</fullName>
                </value>
                <value>
                    <fullName>SGD - Singaporean dollar</fullName>
                </value>
                <value>
                    <fullName>BRL - Brazilian Real</fullName>
                </value>
                <value>
                    <fullName>CNY - Chinese Yuan</fullName>
                </value>
                <value>
                    <fullName>HRK - Croatian Kuna</fullName>
                </value>
                <value>
                    <fullName>IDR - Indonesian Rupiah</fullName>
                </value>
                <value>
                    <fullName>INR - Indian Rupee</fullName>
                </value>
                <value>
                    <fullName>KRW - South Korean Won</fullName>
                </value>
                <value>
                    <fullName>MYR - Malaysian Ringgit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_CurrentValue__c</fullName>
        <description>Current Value of the Asset/Liability</description>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_DerivingRentalIncome__c</fullName>
        <description>The amount of deriving rental income</description>
        <label>Deriving Rental Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_FinancialGoal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Goal lookup on Asset &amp; Liabilities</description>
        <label>Financial Goal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FinServ__FinancialGoal__c.FinServ__PrimaryOwner__c</field>
                <operation>equals</operation>
                <valueField>$Source.FinServ__PrimaryOwner__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FinServ__FinancialGoal__c</referenceTo>
        <relationshipLabel>Assets and Liabilities</relationshipLabel>
        <relationshipName>Assets_and_Liabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_InceptionDate__c</fullName>
        <description>Inception date of the Asset/Liability</description>
        <label>Inception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_InterestRate__c</fullName>
        <description>Interest Rate of the Asset/Liability</description>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_InvestmentName__c</fullName>
        <description>The Name of the Investment</description>
        <label>Investment Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_InvestmentValue__c</fullName>
        <description>This field describes the value invested in the asset and is filled from FNA Sync</description>
        <label>Investment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_LastUpdatedDatefromSource__c</fullName>
        <description>Last date the record was updated</description>
        <label>Last Updated Date From Source</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_LiabilityAmount__c</fullName>
        <description>This field describes the amount of liability and is filled from FNA Sync</description>
        <label>Liability Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_LiabilityName__c</fullName>
        <description>This field describes the name of the liability and is filled from FNA Sync</description>
        <label>Liability Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_LiabilityTerm__c</fullName>
        <description>The term for which liability (Time)</description>
        <label>Liability Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Linked_Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the expense linked to this record</description>
        <label>Linked Expense</label>
        <referenceTo>AW_Expense__c</referenceTo>
        <relationshipLabel>Assets and Liabilities (Linked Expense)</relationshipLabel>
        <relationshipName>Assets_and_Liabilities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_Linked_Income__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the income linked to this record</description>
        <label>Linked Income</label>
        <referenceTo>AW_Income__c</referenceTo>
        <relationshipLabel>Assets and Liabilities</relationshipLabel>
        <relationshipName>Assets_and_Liabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_Linked_Liabiltiy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A Lookup to the Liability which is linked to this record</description>
        <label>Linked Liability</label>
        <referenceTo>FinServ__AssetsAndLiabilities__c</referenceTo>
        <relationshipLabel>Assets and Liabilities (Linked Liability)</relationshipLabel>
        <relationshipName>Assets_and_Liabilities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_MasterAccountId__c</fullName>
        <description>Used to store the Master Account Id, if Master Account Exists for the Active Account</description>
        <formula>IF(AND(ISPICKVAL(FinServ__PrimaryOwner__r.FinServ__Status__c , &apos;Active&apos;), NOT(ISNULL(FinServ__PrimaryOwner__r.AW_ParentAccount__r.Id))),FinServ__PrimaryOwner__r.AW_ParentAccount__r.Id,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AW_MasterAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_MasterAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the Master Account Details</description>
        <label>MasterAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets and Liabilities (MasterAccount)</relationshipLabel>
        <relationshipName>Assets_and_Liabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_MonthlyRepayment__c</fullName>
        <description>This field describes the monthly repayment amount associated with the asset/liability and is filled from FNA Sync</description>
        <label>Monthly Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_OutstandingAmount__c</fullName>
        <description>The outstanding amount for the current record</description>
        <label>Outstanding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Owner_UACFID__c</fullName>
        <description>Record Owner&apos;s liberty UACFID</description>
        <formula>Owner:User.AW_UACFID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner UACFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ParentAccountOwnerId__c</fullName>
        <description>Used to store the Parent Account Owner Id</description>
        <formula>IF(NOT(ISNULL(FinServ__PrimaryOwner__r.Id)),FinServ__PrimaryOwner__r.OwnerId,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AW_ParentAccountOwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Premium__c</fullName>
        <description>This field describes the asset premium and is filled from FNA Sync</description>
        <label>Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_ProductName__c</fullName>
        <description>This field describes the product name and is filled from FNA Sync</description>
        <label>Product Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ProductType__c</fullName>
        <description>A picklist to select the product types</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unassigned</fullName>
                </value>
                <value>
                    <fullName>Endowment</fullName>
                </value>
                <value>
                    <fullName>Financial Protector</fullName>
                </value>
                <value>
                    <fullName>Interest only investment</fullName>
                </value>
                <value>
                    <fullName>LISP</fullName>
                </value>
                <value>
                    <fullName>Living Annuity</fullName>
                </value>
                <value>
                    <fullName>Pension</fullName>
                </value>
                <value>
                    <fullName>Pension Preserver</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>Provident</fullName>
                </value>
                <value>
                    <fullName>Provident Preserver</fullName>
                </value>
                <value>
                    <fullName>Retirement Annuity (RA)</fullName>
                </value>
                <value>
                    <fullName>Risk Protection</fullName>
                </value>
                <value>
                    <fullName>Unit trust</fullName>
                </value>
                <value>
                    <fullName>Unlisted asset</fullName>
                </value>
                <value>
                    <fullName>Shares</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_PropertyName__c</fullName>
        <description>This field describes the name of the property owned and is filled from FNA Sync</description>
        <label>Property Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PurchasePrice__c</fullName>
        <description>The price in which the Asset/Liability was purchased</description>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_RentalIncomeAmount__c</fullName>
        <description>This field describes the amount of rental income and is filled from FNA Sync</description>
        <label>Rental Income Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_ShareWithMyAdviser__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Allows the community user to share assets and liabilities with the adviser</description>
        <label>Share with my adviser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_Source_System_Name__c</fullName>
        <description>A picklist to select source system name</description>
        <label>Source System Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AW_Source_System_Names</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_UpdatedByMulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check MuleSoft Update Status</description>
        <label>Updated by MuleSoft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Amount__c</fullName>
        <description>Amount of an asset (positive) or liability (negative).</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__AssetsAndLiabilitiesSource__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yodlee</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__AssetsAndLiabilitiesType__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Loan</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personal Loan</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Automobile</fullName>
                </value>
                <value>
                    <fullName>Collection</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Jewelry</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial account that this asset or liability is related to.</description>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Assets and Liabilities</relationshipLabel>
        <relationshipName>AssetsAndLiabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household that this asset or liability rolls up to.</description>
        <label>Household</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>IndustriesHousehold</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Assets and Liabilities</relationshipLabel>
        <relationshipName>HouseholdAssetsAndLiabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__JointOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Joint Owner</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>IndustriesIndividual</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Joint Owner</relationshipLabel>
        <relationshipName>JointOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__OwnerType__c</fullName>
        <label>Owner Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Ownership__c</fullName>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryOwner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>IndustriesHousehold</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Assets and Liabilities</relationshipLabel>
        <relationshipName>ClientAssetsAndLiabilities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Assets and Liabilities</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <columns>NAME</columns>
        <columns>FinServ__Description__c</columns>
        <columns>FinServ__Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Asset or Liability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets and Liabilities</pluralLabel>
    <recordTypes>
        <fullName>FinServ__Liability</fullName>
        <active>true</active>
        <description>Debt owed, such as a mortgage</description>
        <label>Liability</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__NonfinancialAsset</fullName>
        <active>true</active>
        <description>Asset not represented in financial accounts, such as real estate or collectibles</description>
        <label>Asset</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liabilities</fullName>
        <active>true</active>
        <description>Debt owed, such as a home loan</description>
        <label>Liabilities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Assets</fullName>
        <active>true</active>
        <description>Other Assets Record Type</description>
        <label>Other Assets</label>
    </recordTypes>
    <recordTypes>
        <fullName>Property_Asset</fullName>
        <active>true</active>
        <description>Property Asset Record Type</description>
        <label>Property (Asset)</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FinServ__NoJointOwnerForIndividualAccounts</fullName>
        <active>true</active>
        <description>Error message when a joint owner is entered for an individually owned account.</description>
        <errorConditionFormula>AND(ISPICKVAL(FinServ__Ownership__c , &quot;Individual&quot;), NOT(ISBLANK(FinServ__JointOwner__c)))</errorConditionFormula>
        <errorMessage>Individually owned accounts can&apos;t have a joint owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__PrimaryAndJointOwnerCannotBeSame</fullName>
        <active>true</active>
        <description>Check to see if Primary Owner and the Joint Owner are the same person</description>
        <errorConditionFormula>FinServ__PrimaryOwner__c = FinServ__JointOwner__c</errorConditionFormula>
        <errorMessage>The primary and joint owner must be different.</errorMessage>
    </validationRules>
</CustomObject>